--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -4,15 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--estilos BS online-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!--fin estilos BS online-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <title>cerveceria el nogal</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Luxurious+Roman&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../estilos/estilo_index.css"/>
     <title>NOSOTROS</title>
 </head>
+
 <body>
+
+    <!--Encabezado-->
+
     <header>
         <a href="../index.html"><img src="../img/logo_cerveceria_nogal.png" alt="logo_cerveceria_nogal" class="logoInicio"></a>
         <nav class="menu">
@@ -23,15 +29,25 @@
                 <a href="../views/contactanos.html">CONTACTANOS</a>
             </div>
         </nav>
-     </header>
-     <section>
+    </header>
+
+    <!--Fin Encabezado-->
+
+    <!--Banner y titulo-->
+
+    <section>
          <div class="sobreNosotros">
      <H2>SOBRE NOSOTROS</H2>
      <img src="../img/bar fuera.jpg" alt="bar fuera" width="700px" height="300px">
-     <p>Bar nacido en 2001 en la ciudad de buebnos aires, contamos con un grupo d eamigos que se reunia a fabricar y catar birra por gusto, hasta que decidimos compartir nuestras delicias y experimentos. contando actuamente con tres bares en diferentes partes del pais(CABA,CORDOBA Y SALTA) y una aplia varidad de recetas para el paladar.
+     <p>Bar nacido en 2001 en la ciudad de buebnos aires, contamos con un grupo de amigos que se reunia a fabricar y catar birra por gusto, hasta que decidimos compartir nuestras delicias y experimentos. contando actuamente con tres bares en diferentes partes del pais(CABA,CORDOBA Y SALTA) y una aplia varidad de recetas para el paladar.
      </p>
     </div>
     </section>
+
+    <!--Fin Banner y titulo-->
+
+    <!--Contenido-->
+
     <article>
         <div class="trabajadores">
         <img src="../img/trabajador2.jpg" alt="trabajador" class="trabajador">
@@ -45,13 +61,24 @@
         </div>
     </div>
     </article>
+
+    <!--Fin Contenido-->
+
+    <!--link JV-->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <!--fin link JV-->
+
 </body>
-<footer>
+
+<!--Footer-->
+
+    <footer>
     <section>
     <a href="../index.html"><img src="../img/logo_cerveceria_nogal.png" alt="logo_cerveceria_nogal" class="logoPie"></a> 
     </section>
     
-    <div class="footer">
+    <div class="footer1">
     <div class="itemsFooter">
         <h2>REDES SOCIALES</h2>
      
@@ -77,5 +104,8 @@
     </div>
 
     <div class="derechos"><p>(c)todos los derechos reservados</p></div>
-</footer>
+    </footer>
+
+<!--Fin Footer-->
+
 </html>
