--- a/views/bares.html
+++ b/views/bares.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BARES</title>
+    <!--estilos BS online-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!--fin estilos BS online-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Luxurious+Roman&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../estilos/estilo_index.css"/>
+    <title>BARES</title>
 </head>
+
 <body>
+    <!--Encabezado-->
+
     <header>
         <a href="../index.html"><img src="../img/logo_cerveceria_nogal.png" alt="logo_cerveceria_nogal" class="logoInicio"></a>
         <nav class="menu">
@@ -21,36 +27,85 @@
                 <a href="../views/contactanos.html">CONTACTANOS</a>
             </div>
         </nav>
-     </header>
-     <section>
-         <div class="imagenBar">
-         <h2>NUESTROS BARES</h2>
-         <img src="../img/bar_bares.jpg" alt="bares">
-        </div>
+    </header>
 
-        <div class="contenedorBares">
-            <div class="nuestroBar">
-         <h2>CABA</h2>
-        <p>nuestra primnera cede cervecera en el emblimatico barrio de florestra, contamos con un espacio amplio y terraza, un lugar birrero con ambiente porteño.
-        </p>
-            </div>
-            <div class="nuestroBar">
-        <h2>CORDOBA</h2>
-        <p>nuestro bar en cordoba esta situado en un bario rustico rodeado de naturaleza, teniendo una plaza cerca, buen ambiente y muchos arboles para relajarse. ideal para descansar despues d eun dia movido.</p>
-            </div>
-            <div class="nuestroBar">
-        <h2>SALTA</h2>
-        <p>bar situado en salta capital, en un shopping dpond epueden pasar a beber una birra luego de un dia lleno de compras.</p>
-            </div>
-        </div>
-     </section>    
+    <!--Fin Encabezado-->
+
+    <!--titulo-->
+
+    <div class="consulta">
+        <h2>Nuestros Bares</h2>
+    </div>
+    
+    <!--Fin titulo-->
+    
+    <!--Imagen de bienvenida-->
+    
+    <div class="container imagenBar">
+    
+    <img src="../img/barinicio.jpg" class="img-fluid border" alt="PasandoUnaBirra"> 
+    
+    </div>
+
+    <!--Fin Imagen de bienvenida-->
+
+    <!--Contenido-->
+
+    <section>
+        <div class="container contenedorBares w-100 mt-5 mx-auto">
+
+            <div class="container contenedorBares">
+                <div class="row">
+                  <div class="col-md-4">
+
+                    <h2>CABA</h2>
+                    <img src="../img/bar1.jpg" class="img-fluid border border-secondary" alt="bar1">
+                    <p>Nuestra primera cede cervecera en el emblimatico barrio de florestra, contamos con un espacio amplio y terraza, un lugar birrero con ambiente porteño.</p>
+
+                  </div>
+
+                  <div class="col-md-4">
+
+                    <h2>CORDOBA</h2>
+                    <img src="../img/bar2.jpg" class=" img-fluid border border-secondary " alt="bar2">
+                    <p>Nuestro bar en cordoba esta situado en un bario rustico rodeado de naturaleza, teniendo una plaza cerca, buen ambiente y muchos arboles para relajarse. ideal para descansar despues d eun dia movido.</p>
+
+                  </div>
+
+                  <div class="col-md-4 barSalta">
+
+                    <h2>SALTA</h2>
+                    <img src="../img/bar3.jpg" class="barSalta img-fluid border border-secondary" alt="bar3">
+                    <p>Bar situado en salta capital, en un shopping donde pueden pasar a beber una birra luego de un dia lleno de compras.</p>
+
+                  </div>
+                </div>
+              </div>
+           
+          </div>
+      
+        
+    </section>
+
+    <!--Fin Contenido-->
+     
+    
+
+<!--link JV-->
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+<!--fin link JV-->
+
 </body>
-<footer>
+
+    <!--Footer-->
+
+    <footer>
     <section>
         <a href="../index.html"><img src="../img/logo_cerveceria_nogal.png" alt="logo_cerveceria_nogal" class="logoPie"></a>
     </section>
     
-    <div class="footer">
+    <div class="footer1">
     <div class="itemsFooter">
         <h2>REDES SOCIALES</h2>
      
@@ -76,5 +131,8 @@
     </div>
 
     <div class="derechos"><p>(c)todos los derechos reservados</p></div>
-</footer>
+    </footer>
+
+    <!--Fin Footer-->
+
 </html>
