--- a/views/cervezas.html
+++ b/views/cervezas.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CERVEZAS</title>
+    <!--estilos BS online-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!--fin estilos BS online-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Luxurious+Roman&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../estilos/estilo_index.css"/>
+    <title>CERVEZAS</title>
 </head>
+
 <body>
+    <!--Encabezado-->
+
     <header>
         <a href="../index.html"><img src="../img/logo_cerveceria_nogal.png" alt="logo_cerveceria_nogal" class="logoInicio"></a>
         <nav class="menu">
@@ -21,16 +27,23 @@
                 <a href="../views/contactanos.html">CONTACTANOS</a>
             </div>
         </nav>
-     </header>
+    </header>
+     
+     <!--Fin Encabezado-->
 
-<section>
+     <!--Banner y titulo-->
+
+    <section>
     <div class="cervezas">
         <H2>NUESTRAS CERVEZAS</H2>
          <img src="../img/tipos-de-birra.jpg" alt="cervezas">
         </div>
-</section>
+    </section>
 
-     <main class="gridCervezas">
+    <!--Fin Banner y titulo-->
+
+    <!--Contenido-->
+    <main class="gridCervezas">
 
          <h2 class="tituloRubias">RUBIAS</h2>
          <h2 class="tituloRojas">ROJAS</h2>
@@ -57,22 +70,30 @@
          <h3 class="nombreBock">BOCK</h3>
          <img src="../img/cervezaBock.jpg" alt="cerveza BOCK" class="cervezaBock">
 
-     </main>
-
+    </main>
 
     <section>
         <div class="pedirAhora">
             <a href="../views/contactanos.html">¡PEDIR AHORA!</a>
         </div>
     </section>
-    </body>
+
+    <!--Fin Contenido-->
+
+    <!--link JV-->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <!--fin link JV-->
+
+</body>
+    <!--Footer-->
 
     <footer>
         <section>
             <a href="../index.html"><img src="../img/logo_cerveceria_nogal.png" alt="logo_cerveceria_nogal" class="logoPie"></a>
         </section>
         
-        <div class="footer">
+        <div class="footer1">
         <div class="itemsFooter">
             <h2>REDES SOCIALES</h2>
          
@@ -99,4 +120,7 @@
     
         <div class="derechos"><p>(c)todos los derechos reservados</p></div>
     </footer>
+
+    <!--Fin Footer-->
+
 </html>
