--- a/views/contactanos.html
+++ b/views/contactanos.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CONTACTANOS</title>
+    <!--estilos BS online-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!--fin estilos BS online-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Luxurious+Roman&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../estilos/estilo_index.css"/>
+    <title>CONTACTANOS</title>
 </head>
+
 <body>
+    <!--Encavezado-->
+
     <header>
         <a href="../index.html"><img src="../img/logo_cerveceria_nogal.png" alt="logo_cerveceria_nogal" class="logoInicio"></a>
         <nav class="menu">
@@ -22,35 +28,66 @@
             </div>
         </nav>
     </header>
-    <section>
-        <div class="consulta">
+
+    <!--Fin de Encavezado-->
+
+     <!--titulo-->
+
+     <div class="consulta">
         <h2>Dejanos tu consulta:</h2>
-        <img src="../img/gente1.jpg" alt="personas tomando birra">
-        </div>
-    </section>
-     <main class="formulario">
-         <fieldset>
-         <form action="">
-            <label for="nombre">Nombre:</label>
-            <input type="text" name="nombre" id="nombre" placeholder="tu nombre" required>
-            <label for="email">Email:</label>
-            <input type="email" name="email" id="email" placeholder="tu correo" required>
-            <br></br>
-            <textarea name="texto" id="texto" cols="30" rows="10" required placeholder="dejanos tu consulta"></textarea>
-            <br></br>
-            <input type="button" name="" id="" value="enviar">
-            <input type="button" name="" id="" value="borrar">
-         </form>
-        </fieldset>
-     </main>
+    </div>
+
+    <!--Fin titulo-->
+
+    <!--Imagen de bienvenida-->
+
+    <div class="container imagenContactos">
+
+    <img src="../img/PasandoBirra.jpg" class="img-fluid border" alt="PasandoUnaBirra"> 
+
+    </div>
+
+    <!--Fin de Imagen de bienvenida-->
+
+    <!--Formulario-->
     
+    <div class="container formulario">
+
+        <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Tu Email:</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nombre@email.com">
+          </div>
+          <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label">Escribenos:</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+
+            <!--Botones-->
+            <input class="btn btn-primary mt-2" type="button" value="Enviar">
+
+            <input class="btn btn-primary mt-2" type="reset" value="Borrar">
+            
+          </div>
+        
+    </div>
+
+    <!--Fin formulario-->
+
+    <!--link JV-->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <!--fin link JV-->
+
+
 </body>
-<footer>
-    <section>
-        <a href="../index.html"><img src="../img/logo_cerveceria_nogal.png" alt="logo_cerveceria_nogal" class="logoPie"></a>
-    </section>
+    <!--Footer-->
+
+    <footer>
     
-    <div class="footer">
+        <a href="../index.html"><img src="../img/logo_cerveceria_nogal.png" alt="logo_cerveceria_nogal" class="logoPie"></a>
+
+    
+    <div class="footer1">
+        
     <div class="itemsFooter">
         <h2>REDES SOCIALES</h2>
      
@@ -76,5 +113,8 @@
     </div>
 
     <div class="derechos"><p>(c)todos los derechos reservados</p></div>
-</footer>
+    </footer>
+
+    <!--Fin Footer-->
+
 </html>
