--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -19,9 +19,10 @@ footer{
         } 
     }
     .footer1{
+        
         & h2{
             margin-top: 15px;
-            color: $marino;
+            color:map-get($paleta, ceniza);;
             font-size: $tamanoTitulos;
         
          }
@@ -42,7 +43,7 @@ footer{
         margin: 15px;
         h2{
             margin-top: 15px;
-            color: $marino;
+            color: map-get($paleta, ceniza);
             font-size: $tamanoTitulos;
         
          }
@@ -76,7 +77,7 @@ footer{
 /*footer desktop*/
 @media(min-width: 1024px){
 footer{
-    width: 98%;
+    width: 100%;
     display: flex;
     flex-flow: row;
     align-items: center;
@@ -92,6 +93,13 @@ footer{
         width:100%;
         padding-top:15px;
         margin-left: 10px;
+        .ti1{
+            font-size: 45px;
+            background-color: $marino;
+            border-style:solid;
+            border-color: $negro;
+        }
+        
         h2{
             margin-top: 15px;
             color: $marino;
@@ -104,8 +112,12 @@ footer{
             color: $negro;}
              }
         .RD{
-            width: 60px;
+            @extend.ti1;
+            background-color: $marino;
+            @include tamano (60px, 60px)
+
         }
+        
     }
     .itemsFooter{
         width: 100%;
@@ -113,11 +125,11 @@ footer{
         flex-flow: column;
         align-items: center; 
         text-align: center;
-        h2{
-            margin-top: 15px;
-            color: $marino;
-            font-size: $tamanoTitulos;
         
+        h2{
+           margin-top: 15px;
+           color: $marino;
+           font-size: $tamanoTitulos;
          }
         ul{
             margin-top: 10px;
@@ -126,9 +138,9 @@ footer{
             li{
                color:$negro; 
             }
-
         
          }
+         
     }
 }
 /*Fin footer desktop*/
