--- a/views/bares.html
+++ b/views/bares.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--KEYWORDS Y DESCRIPCION-->
+    <meta name="description" content="bares de cerveceria el nogal, en buenos aires, cordoba y salta. ">
+    <meta name="keywords" content="cerveveza el nogal, cerveza artesanal, bares, cerveza, beer, bare en capital, bar en cordoba, bar en salta">
     <!--estilos BS online-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--fin estilos BS online-->
@@ -11,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Luxurious+Roman&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../estilos/estilo_index.css"/>
-    <title>BARES</title>
+    <title>NUESTROS BARES</title>
 </head>
 
 <body>
